# Chimera

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: main.yaml
configs/dataset/: arxiv.yaml
configs/model/: longformer.yaml  standard_flash.yaml
configs/training/: default.yaml
src/data_pipeline/: arxiv.py
