[tool.poetry]
name = "project-chimera"
version = "0.1.0"
description = "An experimental framework for comparing and optimizing efficient Transformer architectures on long-text tasks."
authors = ["Muhammad Maaz <mmaaz172005@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
# Compatible with PyTorch Docker images (Python 3.10+)
python = "^3.10"
torch = "^2.3.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
datasets = "^2.14.0"
tqdm = "^4.65.0"
hydra-core = "^1.3.0"
omegaconf = "^2.3.0"
mlflow = "^2.8.0"
fastapi = "^0.104.0"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
# Remove flash-attn for now due to compilation issues in Docker
# flash-attn = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"